--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <section id="specialization" class="specialization">
   <div class="container">
     <h1 class="specialization__header">Мы специализируемся в сфере PR, конфликтологии, реализации коммуникационных
-      <br>проектов.</h1>
+      <br class="tablet-none">проектов.</h1>
 
     <h2 class="specialization__subheader">Предоставляем услуги в следующих областях:</h2>
 
@@ -309,32 +309,6 @@
   </div>
 </section>
 
-<section class="projects default-section">
-  <div class="container">
-    <img id="projects-1" src="./img/projects-1.png" alt="projects-1">
-    <img id="projects-2" src="./img/projects-2.png" alt="projects-2">
-    <img id="projects-3" src="./img/projects-3.png" alt="projects-3">
-    <img id="projects-4" src="./img/projects-4.png" alt="projects-4">
-
-    <div class="red-header">
-      <h1>Наши проекты и клиенты</h1>
-    </div>
-
-    <ul class="dot-list">
-      <li>Проект планировки территории по программе реновации (2019)</li>
-      <li>Проект планировки территории долины реки Сетунь (2017)</li>
-      <li>Проект планировки территории Завода Казакова (2018)</li>
-      <li>Проект планировки территории Мякининской Поймы (2018)</li>
-      <li>Проекты межевания территории Западного<br>Административного Округа (2016) – 19 проектов</li>
-      <li>Проект планировки территории района Дорогомилово Фили-кровля (2017)</li>
-      <li>Проект планировки участка линейного объекта<br>улично-дорожной сети – Северного дублёра Кутузовского
-        проспекта. (2016)
-      </li>
-      <li>Проект правил землепользования и застройки<br>Москвы(ЗАО) (2016)</li>
-    </ul>
-  </div>
-</section>
-
 <section class="contacts default-section">
   <div class="container">
     <div class="red-header">
@@ -344,16 +318,6 @@
     <div class="contacts__section">
       <p>Электронная почта</p>
       <p><span>Pregion7777@yandex.ru</span></p>
-    </div>
-
-    <div class="contacts__section">
-      <p>Лица</p>
-      <p><span>Смолкин О. А.</span> – руководитель Группы кампаний</p>
-      <p><span>Прокофьев А. В.</span> – заместитель по конфликтологии, директор ООО «РЕГИОН 77»</p>
-      <p><span>Степанов Н. Р.</span> – заместитель по креативному направлению</p>
-      <p><span>Барский А. Б.</span> – руководитель организационного блока</p>
-      <p><span>Ивочкин П. В.</span> – заместитель по аналитике</p>
-      <p><span>Астранин И. В.</span> – заместитель по СММ</p>
     </div>
   </div>
 </section>
