--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <div class="container">
     <div class="intro__content">
       <div class="intro__text">
-        <h2>ОБЩЕСТВО С ОГРАНИЧЕННОЙ<br>ОТВЕТСТВЕННОСТЬЮ</h2>
-        <h1>«Регион 77»</h1>
+        <h1>Регион 77</h1>
         <p>Входит в ГК «Новые Коммуникационные Системы»</p>
       </div>
       <div class="intro__block"></div>
