--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="intro__content">
       <div class="intro__text">
         <h1>Регион 77</h1>
-        <p>«Новые Коммуникационные Системы»</p>
+        <p>ГК «Новые Коммуникационные Системы»</p>
       </div>
       <div class="intro__block"></div>
       <img id="intro-arrow" src="./img/arrow.svg" alt="arrow">
